# cmd/api/docs/swagger.json
@@ -219,6 +219,9 @@
                     }
                 ],
                 "description": "Uploads a video file and returns a video ID for further operations",
+                "consumes": [
+                    "multipart/form-data"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -226,6 +229,15 @@
                     "video"
                 ],
                 "summary": "Upload a video",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "The video file to upload",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
